--- a/src/FastWildcard/FastWildcard.csproj
+++ b/src/FastWildcard/FastWildcard.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <Authors>Alex Angas</Authors>
     <Company />
     <Description>A fast and robust wildcard matching library for .NET Standard.</Description>
@@ -11,6 +11,7 @@
     <RepositoryUrl>https://github.com/fastwildcard/fastwildcard</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>wildcard match string</PackageTags>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
 </Project>
