Fixed FastWildcard Performance project references

--- a/tests/FastWildcard.Performance.Tests/FastWildcard.Performance.Tests.csproj
+++ b/tests/FastWildcard.Performance.Tests/FastWildcard.Performance.Tests.csproj
@@ -9,14 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\FastWildcard\FastWildcard.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.0" />
     <PackageReference Include="Bogus" Version="22.3.2" />
     <PackageReference Include="FluentAssertions" Version="5.4.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='net461'">
