--- a/src/FastWildcard/FastWildcard.csproj
+++ b/src/FastWildcard/FastWildcard.csproj
@@ -4,4 +4,30 @@
     <TargetFrameworks>netstandard1.3;netstandard2.0;netcoreapp2.1</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <id>FastWildcard</id>
+    <version>3.1.0</version>
+    <title>Fast Wildcard</title>
+    <authors>Alex Angas</authors>
+    <owners>alexangas</owners>
+    <licenseUrl>https://github.com/fastwildcard/fastwildcard/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/fastwildcard/fastwildcard</projectUrl>
+    <repository>
+      <type>git</type>
+      <url>https://github.com/fastwildcard/fastwildcard.git</url>
+      <branch>master</branch>
+    </repository>
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <summary>A fast and robust wildcard matching library for .NET.</summary>
+    <description>
+      A wildcard matching library for .NET Core 2.x, and .NET Standard 1.3/2.0.
+      Fast: developed with regular benchmarking and performance analysis to provide the best speed possible!
+      Robust: extensively unit tested to be reliable and predictable - no edge cases!
+    </description>
+    <language>en-US</language>
+    <releaseNotes>Please see https://github.com/fastwildcard/fastwildcard/releases/ for release notes.</releaseNotes>
+    <copyright>Copyright (c) 2018 Alex Angas</copyright>
+    <tags>wildcard match string</tags>
+  </PropertyGroup>
+
 </Project>
