--- a/tests/FastWildcard.Performance/FastWildcard.Performance.csproj
+++ b/tests/FastWildcard.Performance/FastWildcard.Performance.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.1" />
+    <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.11.1" />
     <PackageReference Include="Bogus" Version="24.3.0" />
   </ItemGroup>
 
