--- a/tests/FastWildcard.Performance.Tests/FastWildcard.Performance.Tests.csproj
+++ b/tests/FastWildcard.Performance.Tests/FastWildcard.Performance.Tests.csproj
@@ -9,9 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture.Xunit2" Version="4.5.0" />
     <PackageReference Include="BenchmarkDotNet" Version="0.11.1" />
     <PackageReference Include="Bogus" Version="24.3.0" />
     <PackageReference Include="FluentAssertions" Version="5.4.2" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
