--- a/tests/FastWildcard.Performance.NuGet/FastWildcard.Performance.NuGet.csproj
+++ b/tests/FastWildcard.Performance.NuGet/FastWildcard.Performance.NuGet.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
@@ -13,17 +13,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\FastWildcard\FastWildcard.csproj" />
+    <Compile Include="..\FastWildcard.Performance\Benchmarks\IterationBuilder.cs" Link="Benchmarks\IterationBuilder.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BenchmarkDotNet" Version="0.11.2" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.11.2" />
     <PackageReference Include="Bogus" Version="24.3.0" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFramework)'=='net461'">
-    <PackageReference Include="WildcardMatch" Version="1.0.5" />
+    <PackageReference Include="FastWildcard" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
