--- a/src/FastWildcard/FastWildcard.csproj
+++ b/src/FastWildcard/FastWildcard.csproj
@@ -13,7 +13,7 @@
     <owners>alexangas</owners>
     <licenseUrl>https://github.com/fastwildcard/fastwildcard/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/fastwildcard/fastwildcard</projectUrl>
-    <iconUrl>https://github.com/fastwildcard/fastwildcard/raw/master/fastwildcard.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/fastwildcard/fastwildcard/master/fastwildcard.png</iconUrl>
     <repository>
       <type>git</type>
       <url>https://github.com/fastwildcard/fastwildcard.git</url>
@@ -22,13 +22,13 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <summary>A fast and robust wildcard matching library for .NET.</summary>
     <description>
-      A wildcard matching library for .NET Core 2.x, and .NET Standard 1.3/2.0.
+      A wildcard matching library for .NET Core 2.x, and .NET Standard 1.3/2.x.
       Robust: extensively unit tested to be reliable and predictable - no edge cases!
       Fast: developed with regular benchmarking and performance analysis to provide the best speed possible!
     </description>
     <language>en-US</language>
     <releaseNotes>Please see https://github.com/fastwildcard/fastwildcard/releases/ for release notes.</releaseNotes>
-    <copyright>Copyright (c) 2018 Alex Angas</copyright>
+    <copyright>Copyright (c) 2018-2019 Alex Angas</copyright>
     <tags>wildcard match string</tags>
   </PropertyGroup>
 
