--- a/tests/FastWildcard.Performance.NuGet/FastWildcard.Performance.NuGet.csproj
+++ b/tests/FastWildcard.Performance.NuGet/FastWildcard.Performance.NuGet.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.0;netcoreapp2.1;net461</TargetFrameworks>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
@@ -17,9 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.11.2" />
-    <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.11.2" />
-    <PackageReference Include="Bogus" Version="24.3.0" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.11.5" />
+    <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" Version="0.11.5" />
+    <PackageReference Include="Bogus" Version="28.4.1" />
     <PackageReference Include="FastWildcard" Version="2.0.1" />
   </ItemGroup>
 
