Update azure-pipelines.yml for Azure Pipelines

--- a/tests/FastWildcard.Performance/azure-pipelines.yml
+++ b/tests/FastWildcard.Performance/azure-pipelines.yml
@@ -25,16 +25,13 @@ steps:
     archiveFile: '$(Build.ArtifactStagingDirectory)/FastWildcard.Performance-$(Build.BuildId).zip'
     replaceExistingArchive: true
 
-- task: PowerShell@2
-  displayName: 'Download ARM template'
+- task: CopyFiles@2
+  displayName: 'Copy ARM template'
   inputs:
-    targetType: 'inline'
-    script: |
-      Invoke-WebRequest https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/201-vm-winrm-windows/azuredeploy.json -OutFile .\azuredeploy.json
-      
-      Invoke-WebRequest https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/201-vm-winrm-windows/azuredeploy.parameters.json -OutFile .\azuredeploy.parameters.json
-    pwsh: true
-    workingDirectory: '$(Build.ArtifactStagingDirectory)'
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: '**/*/azuredeploy*.json'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    flattenFolders: true
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifacts'
