Added PowerShell as comparison and unit test option

--- a/tests/FastWildcard.Tests/FastWildcard.Tests.csproj
+++ b/tests/FastWildcard.Tests/FastWildcard.Tests.csproj
@@ -24,4 +24,16 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+    <PackageReference Include="System.Management.Automation">
+      <Version>6.2.4</Version>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.1'">
+    <PackageReference Include="System.Management.Automation">
+      <Version>6.2.4</Version>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
