Made autogen part of the standard unit tests

--- a/tests/FastWildcard.Performance/FastWildcard.Performance.csproj
+++ b/tests/FastWildcard.Performance/FastWildcard.Performance.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\FastWildcard\FastWildcard.csproj" />
+    <ProjectReference Include="..\FastWildcard.Tests\FastWildcard.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
