--- a/tests/FastWildcard.Performance.NuGet/FastWildcard.Performance.NuGet.csproj
+++ b/tests/FastWildcard.Performance.NuGet/FastWildcard.Performance.NuGet.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>net5.0;netcoreapp3.1;netcoreapp2.1;net461</TargetFrameworks>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
