--- a/tests/FastWildcard.Performance/FastWildcard.Performance.csproj
+++ b/tests/FastWildcard.Performance/FastWildcard.Performance.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFrameworks>netcoreapp3.1;netcoreapp2.1;net48;net472;net461</TargetFrameworks>
+    <TargetFrameworks>net5.0-windows;netcoreapp3.1;netcoreapp2.1;net48;net472;net461</TargetFrameworks>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
